@@ -6,6 +6,7 @@ import com.google.gson.JsonParser;
 import org.bukkit.Bukkit;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.function.Consumer;
 
@@ -22,38 +23,38 @@ public class UpdateChecker {
     public void getVersion(final Consumer<String> consumer) {
         Bukkit.getScheduler().runTaskAsynchronously(plugin, () -> {
             try {
-
-                URL url = new URL("https://api.modrinth.com/v2/project/" + this.projectSlug + "/version");
-
-
+                URL url = new URI("https://api.modrinth.com/v2/project/" + this.projectSlug + "/version").toURL();
 
                 HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-
-
                 connection.setRequestMethod("GET");
 
+                connection.setConnectTimeout(5000);
+                connection.setReadTimeout(5000);
 
                 connection.setRequestProperty("User-Agent", "Duvo/AvSword/" + plugin.getDescription().getVersion());
 
-                if (connection.getResponseCode() == HttpURLConnection.HTTP_OK) {
-                    InputStreamReader reader = new InputStreamReader(connection.getInputStream());
+                int responseCode = connection.getResponseCode();
 
-                    JsonElement element = new JsonParser().parse(reader);
+                if (responseCode == HttpURLConnection.HTTP_OK) {
+                    try (InputStreamReader reader = new InputStreamReader(connection.getInputStream())) {
+                        JsonElement element = new JsonParser().parse(reader);
 
-                    if (element.isJsonArray()) {
-                        JsonArray versions = element.getAsJsonArray();
-                        if (versions.size() > 0) {
-
-                            String latestVersion = versions.get(0).getAsJsonObject().get("version_number").getAsString();
-                            consumer.accept(latestVersion);
+                        if (element != null && element.isJsonArray()) {
+                            JsonArray versions = element.getAsJsonArray();
+                            if (versions.size() > 0) {
+                                String latestVersion = versions.get(0).getAsJsonObject().get("version_number").getAsString();
+                                consumer.accept(latestVersion);
+                            }
                         }
                     }
-                    reader.close();
+                } else if (responseCode == 404) {
+                    plugin.getLogger().warning("Modrinth projesi bulunamadı (404). Proje ID'si yanlış olabilir: " + this.projectSlug);
                 } else {
-                    plugin.getLogger().warning("Modrinth API'ye bağlanırken hata oluştu. Yanıt kodu: " + connection.getResponseCode());
+                    plugin.getLogger().warning("Güncelleme kontrolü başarısız. API kodu: " + responseCode);
                 }
+
             } catch (Exception exception) {
-                plugin.getLogger().warning("Modrinth güncelleme kontrolü yapılamadı: " + exception.getMessage());
+                plugin.getLogger().warning("Güncelleme kontrolü yapılamadı: " + exception.getMessage());
             }
         });
     }
